--- a/src/midgard-admin/components/endpoint-entries/endpoint-entries.component.html
+++ b/src/midgard-admin/components/endpoint-entries/endpoint-entries.component.html
@@ -3,9 +3,9 @@
 </div>
 <div class="endpoint-entries" *ngIf="paths && paths[0][2]?.includes('get')">
   <div class="endpoint-entries__heading">
-    <h3>{{endpoint}}</h3>
+    <h3>{{endpointTitle}}</h3>
     <fj-button
-      (click)="onButtonClicked(view)"
+      (click)="navigateToForm()"
       [shape]="'rounded'"
       [size]="'small'"
       [iconMargin]="'0px 5px 0px 0px'"
@@ -29,6 +29,8 @@
       [idProp]="'id'"
       [dataProp]="crudInputs?.dataProp"
       [columns]="tableOptions.columns"
+      (selectItem)="navigateToForm($event)"
+      (dataLoadedFromStore)="onDataLoaded(crud.rows)"
       theme="dark"
     >
       <fj-table-custom-column name="Custom" index="10" flex="1" prop="actions">
