--- a/src/midgard/modules/form/form.component.scss
+++ b/src/midgard/modules/form/form.component.scss
@@ -1,6 +1,12 @@
 @import "../../../styles";
 
 .form {
+  &__title {
+    margin: rem-calc(30 0);
+    h3 {
+      margin: 0;
+    }
+  }
   &__card {
     &__content{
       width: 100%;
@@ -13,10 +19,12 @@
     width: 100%;
   }
   &__field {
-    flex:1;
     min-width: rem-calc(140);
     margin-bottom: rem-calc(15);
     margin-right: rem-calc(15);
+  }
+  &__submit {
+    width: 100%;
   }
 }
 
